Set the user dir to to be ~/build (for now)